# todo-cli

./: .gitignore  Cargo.toml  package-lock.json
.github/workflows/: Master-Branch-Flow.yml  Other-Branches-Flow.yml  Tag_Releases-Flow.yml  github-actions-demo.yml
src/: cli_api.rs  data.rs  io.rs  lib.rs  log.rs  main.rs  model.rs
src/io/: data.rs  mod.rs  operations.rs
src/model/: action.rs  data.rs  mod.rs
