[package]
name = "todo-cli"
version = "0.1.0"
authors = ["Carlos Teixeira <c.mh.teixeira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.64"
serde = {version = "1.0.100", features = ["derive"]}