[package]
name = "todo-cli"
version = "0.5.0-SNAPSHOT"
authors = ["Carlos Teixeira <c.mh.teixeira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.64"
serde = {version = "1.0.100", features = ["derive"]}

[profile.release]   # Copied from here https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic


[[bin]]
name = "todo"
path = "src/main.rs"